[package]
name = "rithik_and_aadi_group"  # Corrected crate name to snake case
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
ring = "0.16.20"





